--- a/View/consume/selectService.html
+++ b/View/consume/selectService.html
@@ -1,176 +1,201 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Layui</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../../Static/js/layui/css/layui.css"  media="all">
-    <style>
-        .service-panel {
-            display:inline-block;margin:15px;width: 300px;height:285px;border: 1px solid #00F7DE;
-        }
+    <head>
+        <meta charset="utf-8">
+        <meta name="renderer" content="webkit">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link rel="stylesheet" href="../../Static/js/layui/css/layui.css"  media="all">
+        <style>
+            .service-panel {
+                display:inline-block;margin:15px;width: 300px;height:285px;border: 1px solid #00F7DE;
+            }
 
-        #steps {
-        }
+            #steps {
+            }
 
-        .step-item {
-            display: inline-block;
-            line-height: 26px;
-            position: relative;
-            background: #ffffff;
-        }
+            .step-item {
+                display: inline-block;
+                line-height: 26px;
+                position: relative;
+                background: #ffffff;
+            }
 
-        .step-item-tail {
-            width: 100%;
-            padding: 0 10px;
-            position: absolute;
-            left: 0;
-            top: 13px;
-        }
+            .step-item-tail {
+                width: 100%;
+                padding: 0 10px;
+                position: absolute;
+                left: 0;
+                top: 13px;
+            }
 
-        .step-item-tail i {
-            display: inline-block;
-            width: 100%;
-            height: 1px;
-            vertical-align: top;
-            background: #c2c2c2;
-            position: relative;
-        }
-        .step-item-tail-done {
-            background: #009688 !important;
-        }
+            .step-item-tail i {
+                display: inline-block;
+                width: 100%;
+                height: 1px;
+                vertical-align: top;
+                background: #c2c2c2;
+                position: relative;
+            }
+            .step-item-tail-done {
+                background: #009688 !important;
+            }
 
-        .step-item-head {
-            position: relative;
-            display: inline-block;
-            height: 26px;
-            width: 26px;
-            text-align: center;
-            vertical-align: top;
-            color: #009688;
-            border: 1px solid #009688;
-            border-radius: 50%;
-            background: #ffffff;
-        }
+            .step-item-head {
+                position: relative;
+                display: inline-block;
+                height: 26px;
+                width: 26px;
+                text-align: center;
+                vertical-align: top;
+                color: #009688;
+                border: 1px solid #009688;
+                border-radius: 50%;
+                background: #ffffff;
+            }
 
-        .step-item-head.step-item-head-active {
-            background: #009688;
-            color: #ffffff;
-        }
+            .step-item-head.step-item-head-active {
+                background: #009688;
+                color: #ffffff;
+            }
 
-        .step-item-main {
-            background: #ffffff;
-            display: block;
-            position: relative;
-        }
+            .step-item-main {
+                background: #ffffff;
+                display: block;
+                position: relative;
+            }
 
-        .step-item-main-title {
-            font-weight: bolder;
-            color: #555555;
-        }
-        .step-item-main-desc {
-            color: #aaaaaa;
-        }
-    </style>
-</head>
-<body>
-<!--面包屑-->
-<div style="padding: 10px 0 0 10px;" class="layui-breadcrumb">
-    <a href="javascript:void(1);">消费收银</a>
-    <a href="javascript:void(1);"><cite>选择服务</cite></a>
-</div>
-
-<div style="padding: 20px;">
-    <div style="padding: 20px 0 20px 10%;" id="steps"></div>
-    <!--  第1步  -->
-    <div id="steps-one">
-        <!--存放图片面板-->
-        <div style="padding:10px; border: 1px solid #00FF00;" class="panel-container"></div>
-        <!--分页-->
-        <div id="pages"></div>
+            .step-item-main-title {
+                font-weight: bolder;
+                color: #555555;
+            }
+            .step-item-main-desc {
+                color: #aaaaaa;
+            }
+        </style>
+    </head>
+    <body>
+    <!--面包屑-->
+    <div style="padding: 10px 0 0 10px;" class="layui-breadcrumb">
+        <a href="javascript:void(1);">消费收银</a>
+        <a href="javascript:void(1);"><cite>选择服务</cite></a>
     </div>
-    <!--  第2步  -->
-    <div id="steps-two" style="display: none;">
-        <table class="layui-hide" id="tableId" lay-filter="select-admin"></table>
-    </div>
-    <!--  第3步  -->
-    <div id="steps-three" style="display: none;">
-        <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>会员身份确认</legend>
-        </fieldset>
-        <form class="layui-form " action="">
-            <div class="layui-form-item">
-                <label class="layui-form-label">顾客信息：</label>
-                <div class="layui-input-block">
-                    <input type="radio" lay-filter="customer-filter" name="customer" value="0" title="散客" checked="">
-                    <input type="radio" lay-filter="member-filter" name="customer" value="1" title="会员">
-                    <button type="button" class="layui-btn confirm-customer-type-btn" lay-filter="">确认</button>
-                </div>
-            </div>
-            <div id="customer-part" class="layui-form-item" style="display: none;">
-            </div>
-            <div id="member-part" class="layui-form-item" style="display: none;">
-                <label class="layui-form-label">会员手机号:</label>
-                <div class="layui-input-block">
-                    <input type="text" name="name" class="memberPhone" style="width:200px; height:40px;" lay-verify="required" lay-reqtext="手机号不可为空！" placeholder="请输入会员手机号" autocomplete="off" class="layui-input">
-                </div>
-                <p id="memberResultText"></p>
-            </div>
-        </form>
-</div>
-    <!--  第4步  -->
-    <div id="steps-four" style="display: none;">
-        <form class="layui-form ">
-            <!--显示订单详情-->
-            <div class="layui-form-item">
-                <p id="ordersText"></p>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">支付方式：</label>
-                <div class="layui-input-block">
-                    <input type="radio" lay-filter="" name="payType" value="0" title="现金" checked="">
-                    <input type="radio" lay-filter="" name="payType" value="1" title="微信">
-                    <input type="radio" lay-filter="" name="payType" value="2" title="支付宝">
-                    <input type="radio" lay-filter="" name="payType" value="3" title="刷卡">
-                    <input type="radio" lay-filter="" name="payType" value="4" title="其它">
-                    <input type="radio" lay-filter="" name="payType" value="5" title="会员卡余额">
-                    <button type="button" class="layui-btn pay-btn" lay-filter="">确认支付</button>
-                </div>
-            </div>
-            <div class="layui-form-item" id="balance-recharge" style="display: none;">
-                <label class="layui-form-label">充值金额:</label>
-                <div class="layui-input-block">
-                    <input type="text" name="name" class="balance-recharge-txt" style="width:200px; height:40px;" lay-verify="required" lay-reqtext="充值金额不可为空！" placeholder="请输入充值金额" autocomplete="off" class="layui-input">
-                    <button type="button" class="layui-btn balance-recharge-btn" lay-filter="">充值</button>
-                </div>
-            </div>
-            <!--显示会员充值结果-->
-            <div class="layui-form-item">
-                <p id="memberAddBalanceText"></p>
-            </div>
-        </form>
 
-    </div>
-    <!--  第5步  -->
-    <div id="steps-five" style="display: none;">
-        <!--显示支付详情-->
-        <div class="layui-form-item">
-            <p id="ordersSuccessText"></p>
+    <div style="padding: 20px;">
+        <div style="padding: 20px 0 20px 10%;" id="steps"></div>
+        <!--  第1步  -->
+        <div id="steps-one">
+            <!--存放图片面板-->
+            <div style="padding:10px; border: 1px solid #00FF00;" class="panel-container"></div>
+            <!--分页-->
+            <div id="pages"></div>
         </div>
-        <img src="../../Static/img/orders/paySuccess.jpg" width="200" height="200" alt=""/>
-
+        <!--  第2步  -->
+        <div id="steps-two" style="display: none;">
+            <table class="layui-hide" id="tableId" lay-filter="select-admin"></table>
+        </div>
+        <!--  第3步  -->
+        <div id="steps-three" style="display: none;">
+            <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+                <legend>会员身份确认</legend>
+            </fieldset>
+            <form class="layui-form " action="">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">顾客信息：</label>
+                    <div class="layui-input-block">
+                        <input type="radio" lay-filter="customer-filter" name="customer" value="0" title="散客" checked="">
+                        <input type="radio" lay-filter="member-filter" name="customer" value="1" title="会员">
+                        <button type="button" class="layui-btn confirm-customer-type-btn" lay-filter="">确认</button>
+                    </div>
+                </div>
+                <div id="customer-part" class="layui-form-item" style="display: none;">
+                    散客部分
+                </div>
+                <div id="member-part" class="layui-form-item" style="display: none;">
+                    <label class="layui-form-label">会员手机号:</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="name" class="memberPhone" style="width:200px; height:40px;" lay-verify="required" lay-reqtext="手机号不可为空！" placeholder="请输入会员手机号" autocomplete="off" class="layui-input">
+                    </div>
+                    <p id="memberResultText"></p>
+                </div>
+            </form>
     </div>
+        <!--  第4步  -->
+        <div id="steps-four" style="display: none;">
+            <form class="layui-form ">
+                <!--显示订单详情-->
+                <div class="layui-form-item">
+                    <p id="ordersText"></p>
+                </div>
+                <!--选择支付方式-->
+                <div class="layui-form-item">
+                    <label class="layui-form-label">支付方式：</label>
+                    <div class="layui-input-block">
+                        <input type="radio" lay-filter="cash-filter" name="payType" value="0" title="现金" checked="">
+                        <input type="radio" lay-filter="weixin-filter" name="payType" value="1" title="微信">
+                        <input type="radio" lay-filter="zhifubao-filter" name="payType" value="2" title="支付宝">
+                        <input type="radio" lay-filter="card-filter" name="payType" value="3" title="刷卡">
+                        <input type="radio" lay-filter="other-filter" name="payType" value="4" title="其它">
+                        <input type="radio" lay-filter="member-balance-filter" name="payType" value="5" title="会员卡余额">
+                        <button type="button" class="layui-btn pay-btn" lay-filter="">确认支付</button>
+                    </div>
+                </div>
+                <div id="cash-part" class="layui-form-item" style="display: none;">
+                    现金支付
+                </div>
+                <div id="weixin-part" class="layui-form-item" style="display: none;">
+                    微信支付
+                    <div id='weixin-qrcode' style="display: none;">
+                        <img src="">
+                    </div>
+                    <button type="button" class="layui-btn weixin-qrCode-btn">生成二维码</button>
+                </div>
+                <div id="zhifubao-part" class="layui-form-item" style="display: none;">
+                    支付宝支付
+                    <div id='zhifubao-qrcode' style="display: none;">
+                        <img src="">
+                    </div>
+                    <button type="button" class="layui-btn zhifubao-qrCode-btn">生成二维码</button>
+                </div>
+                <div id="card-part" class="layui-form-item" style="display: none;">
+                    刷卡支付部分
+                </div>
+                <div id="other-part" class="layui-form-item" style="display: none;">
+                    其它支付方式部分
+                </div>
+                <div id="member-balance-part" class="layui-form-item" style="display: none;">
+                    <div class="layui-form-item" id="balance-recharge">
+                        <label class="layui-form-label">充值金额:</label>
+                        <div class="layui-input-block">
+                            <input type="text" name="name" class="balance-recharge-txt" style="width:200px; height:40px;" lay-verify="required" lay-reqtext="充值金额不可为空！" placeholder="请输入充值金额" autocomplete="off" class="layui-input">
+                            <button type="button" class="layui-btn balance-recharge-btn" lay-filter="">充值</button>
+                        </div>
+                    </div>
+                    <!--显示会员充值结果-->
+                    <div class="layui-form-item">
+                        <p id="memberAddBalanceText"></p>
+                    </div>
+                </div>
+            </form>
 
-<script src="../../Static/js/layui/layui.js" charset="utf-8"></script>
-<script src="../../Static/js/layui/layui.all.js" charset="utf-8"></script>
+        </div>
+        <!--  第5步  -->
+        <div id="steps-five" style="display: none;">
+            <!--显示支付详情-->
+            <div class="layui-form-item">
+                <p id="ordersSuccessText"></p>
+            </div>
+            <img src="../../Static/img/orders/paySuccess.jpg" width="200" height="200" alt=""/>
 
-<script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="confirm-btn">预约</a>
-</script>
+        </div>
 
-</body>
+        <script src="../../Static/js/layui/layui.js" charset="utf-8"></script>
+        <script src="../../Static/js/layui/layui.all.js" charset="utf-8"></script>
+        <script type="text/html" id="barDemo">
+            <a class="layui-btn layui-btn-xs" lay-event="confirm-btn">预约</a>
+        </script>
+    </div>
+    </body>
 </html>
 
 <script>
@@ -208,6 +233,8 @@
 
     $(function () {
       requestList({page:1, limit:10});      //每次加载该页面，请求加载服务类型列表
+      document.getElementById("customer-part").style.display="";  //显示散客部分
+      document.getElementById("cash-part").style.display="";  //现金支付部分
     });
 
     //监听 选择服务->"选定"按钮，on方法动态绑定元素jq动态生成的HTML元素service-panel
@@ -330,6 +357,67 @@
       document.getElementById("customer-part").style.display="none";  //隐藏散客
     });
 
+    //选择"现金"支付方式
+    form.on('radio(cash-filter)', function(data){
+      document.getElementById("cash-part").style.display="";  //显示"现金"
+      document.getElementById("weixin-part").style.display="none";
+      document.getElementById("zhifubao-part").style.display="none";
+      document.getElementById("card-part").style.display="none";
+      document.getElementById("other-part").style.display="none";
+      document.getElementById("member-balance-part").style.display="none";
+    });
+
+    //选择"微信"支付方式
+    form.on('radio(weixin-filter)', function(data){
+      document.getElementById("weixin-part").style.display="";  //显示"微信"
+      document.getElementById("cash-part").style.display="none";
+      document.getElementById("zhifubao-part").style.display="none";
+      document.getElementById("card-part").style.display="none";
+      document.getElementById("other-part").style.display="none";
+      document.getElementById("member-balance-part").style.display="none";
+
+    });
+
+    //选择"支付宝"支付方式
+    form.on('radio(zhifubao-filter)', function(data){
+      document.getElementById("zhifubao-part").style.display="";  //显示"支付宝"
+      document.getElementById("cash-part").style.display="none";
+      document.getElementById("weixin-part").style.display="none";
+      document.getElementById("card-part").style.display="none";
+      document.getElementById("other-part").style.display="none";
+      document.getElementById("member-balance-part").style.display="none";
+    });
+
+    //选择"刷卡"支付方式
+    form.on('radio(card-filter)', function(data){
+      document.getElementById("card-part").style.display="";  //显示"刷卡"
+      document.getElementById("cash-part").style.display="none";
+      document.getElementById("zhifubao-part").style.display="none";
+      document.getElementById("weixin-part").style.display="none";
+      document.getElementById("other-part").style.display="none";
+      document.getElementById("member-balance-part").style.display="none";
+    });
+
+    //选择"其它"支付方式
+    form.on('radio(other-filter)', function(data){
+      document.getElementById("weixin-part").style.display="none";
+      document.getElementById("cash-part").style.display="none";
+      document.getElementById("zhifubao-part").style.display="none";
+      document.getElementById("card-part").style.display="none";
+      document.getElementById("other-part").style.display="";
+      document.getElementById("member-balance-part").style.display="none";
+    });
+
+    //选择"会员卡余额"支付方式
+    form.on('radio(member-balance-filter)', function(data){
+      document.getElementById("weixin-part").style.display="none";
+      document.getElementById("cash-part").style.display="none";
+      document.getElementById("zhifubao-part").style.display="none";
+      document.getElementById("card-part").style.display="none";
+      document.getElementById("other-part").style.display="none";
+      document.getElementById("member-balance-part").style.display="";
+    });
+
     //监听第3步->是否会员"确认"按钮
     $(".confirm-customer-type-btn").click(function() {
       customerVal = $('input[name="customer"]:checked').val();
@@ -410,7 +498,8 @@
               }else {  //余额不足
                 layer.msg("该会员账户余额不足，请及时充值", {icon: 5});
                 //显示"充值"部分
-                $('#balance-recharge').show();
+                // $('#balance-recharge').show();
+
               }
               },
             error: function () {  //手机号不存在
@@ -516,5 +605,16 @@
         });
     }
 
+    //微信支付生成二维码,在线生成需要联网https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://layer.layui.com/
+    $(".weixin-qrCode-btn").click(function() {
+      $('#weixin-qrcode img').attr('src', 'https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=' + (new Date()).valueOf());
+      $('#weixin-qrcode').show();
+    })
+
+    //支付宝支付生成二维码,在线生成需要联网
+    $(".zhifubao-qrCode-btn").click(function() {
+      $('#zhifubao-qrcode img').attr('src', 'https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=' + (new Date()).valueOf());
+      $('#zhifubao-qrcode').show();
+    })
     });
 </script>
