订单管理/订单列表,显示订单列表

--- a/View/home.html
+++ b/View/home.html
@@ -47,18 +47,20 @@
                     <a class="" href="javascript:;">消费收银</a>
                     <dl class="layui-nav-child">
                         <dd><a class="menu-item" data-src="/lifadian/View/consume/selectService.html" href="javascript:;">选择服务</a></dd>
-<!--                        <dd><a class="menu-item abc"  data-src="http://www.baidu.com" href="javascript:;">服务选择1</a></dd>-->
-<!--                        <dd><a href="javascript:;">列表三</a></dd>-->
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">员工管理</a>
                     <dl class="layui-nav-child">
                         <dd><a a class="menu-item"  data-src="/lifadian/View/admin/adminList.html" href="javascript:;">员工列表</a></dd>
-                        <dd><a href="javascript:;">列表二</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="">订单管理</a></li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">订单管理</a>
+                    <dl class="layui-nav-child">
+                        <dd><a a class="menu-item"  data-src="/lifadian/View/orders/ordersList.html" href="javascript:;">订单列表</a></dd>
+                    </dl>
+                </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">会员管理</a>
                     <dl class="layui-nav-child">
