数据统计/会员分析,界面显示及图表基本显示

--- a/View/home.html
+++ b/View/home.html
@@ -44,36 +44,44 @@
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
                 <li class="layui-nav-item layui-nav-itemed">
-                    <a class="" href="javascript:;">消费收银</a>
+                    <a class="" href="javascript:">消费收银</a>
                     <dl class="layui-nav-child">
                         <dd><a class="menu-item" data-src="/lifadian/View/consume/selectService.html" href="javascript:;">选择服务</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">员工管理</a>
+                    <a href="javascript:">员工管理</a>
                     <dl class="layui-nav-child">
                         <dd><a a class="menu-item"  data-src="/lifadian/View/admin/adminList.html" href="javascript:;">员工列表</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">订单管理</a>
+                    <a href="javascript:">订单管理</a>
                     <dl class="layui-nav-child">
                         <dd><a a class="menu-item"  data-src="/lifadian/View/orders/ordersList.html" href="javascript:;">订单列表</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">会员管理</a>
+                    <a href="javascript:">会员管理</a>
                     <dl class="layui-nav-child">
                         <dd><a a class="menu-item"  data-src="/lifadian/View/member/memberList.html" href="javascript:;">会员列表</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">系统设置</a>
+                    <a href="javascript:">系统设置</a>
                     <dl class="layui-nav-child">
                         <dd><a a class="menu-item"  data-src="/lifadian/View/systemSetting/addService.html" href="javascript:;">服务类型</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="">数据统计</a></li>
+                <li class="layui-nav-item">
+                    <a href="javascript:">数据统计</a>
+                    <dl class="layui-nav-child">
+<!--                        <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/ordersStat.html" href="javascript:;">订单统计</a></dd>-->
+<!--                        <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/adminStat.html" href="javascript:;">员工统计</a></dd>-->
+                        <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/memberStat.html" href="javascript:;">会员分析</a></dd>
+                        <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/test.html" href="javascript:;">测试</a></dd>
+                    </dl>
+                </li>
             </ul>
         </div>
     </div>
