--- a/View/Orders/ordersList.html
+++ b/View/Orders/ordersList.html
@@ -45,7 +45,7 @@
         , {field: 'member_phone', title: '会员手机号',  align: 'center'}
         , {field: 'should_amount', title: '应收金额',  align: 'center'}
         , {field: 'real_amount', title: '实收金额',  align: 'center'}
-        , {field: 'member_discount', title: '折扣率',  align: 'center'}
+        // , {field: 'member_discount', title: '折扣率',  align: 'center'}
         , {field: 'service_type_name', title: '服务名称',  align: 'center'}
         , {field: 'admin_name', title: '管理员名称',  align: 'center'}
         , {field: 'create_time', title: '创建时间', width: 170, align: 'center'}
