数据统计/会员分析、订单分析，对应图表展示，首页跳转页面的今日图表展示及数据统计

--- a/View/Login/login.html
+++ b/View/Login/login.html
@@ -190,7 +190,7 @@
               success: function (result) {
                 $.cookie('admin', result.result, {expires: 1, path: '/'});
                 layer.msg(result.msg, {}, function () {
-                  location.href = '../home.html';
+                  location.href = '../main/home.html';
                 });
               },
               error: function (result) {
