--- a/View/Main/home.html
+++ b/View/Main/home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>主页面</title>
-    <link rel="stylesheet" href="../Static/js/layui/css/layui.css"  media="all">
+    <title>后端管理平台</title>
+    <link rel="stylesheet" href="../../Static/js/layui/css/layui.css"  media="all">
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
@@ -27,15 +27,15 @@
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
-                    <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-                    贤心
+                    <img src="../../Static/img/Main/admin.jpeg" class="layui-nav-img">
+                    管理员
                 </a>
                 <dl class="layui-nav-child">
                     <dd><a href="">基本资料</a></dd>
                     <dd><a href="">安全设置</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item"><a href="">退出</a></li>
+            <li id="quitLogin"class="layui-nav-item"><a href="../login/login.html">退出</a></li>
         </ul>
     </div>
 
@@ -76,10 +76,8 @@
                 <li class="layui-nav-item">
                     <a href="javascript:">数据统计</a>
                     <dl class="layui-nav-child">
-<!--                        <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/ordersStat.html" href="javascript:;">订单统计</a></dd>-->
-<!--                        <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/adminStat.html" href="javascript:;">员工统计</a></dd>-->
                         <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/memberStat.html" href="javascript:;">会员分析</a></dd>
-                        <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/test.html" href="javascript:;">测试</a></dd>
+                        <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/ordersStat.html" href="javascript:;">订单分析</a></dd>
                     </dl>
                 </li>
             </ul>
@@ -88,26 +86,32 @@
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
-        <iframe src="" frameborder="0" id="content" style="width: 100%;height: 100%;"></iframe>
+        <iframe src="firstPage.html" frameborder="0" id="content" style="width: 100%;height: 100%;"></iframe>
     </div>
 
     <div class="layui-footer">
         <!-- 底部固定区域 -->
-        © layui.com - 底部固定区域
+        © mingmin - 2604327526@qq.com
     </div>
 </div>
 
-<script src="../Static/js/layui/layui.js" charset="utf-8"></script>
+<script src="../../Static/js/layui/layui.js" charset="utf-8"></script>
 
 <script>
   //JavaScript代码区域
   layui.use(['jquery', 'element'], function(){
     var element = layui.element;
     var $ = layui.$;
+    //菜单项
     $('.menu-item').click(function () {
         var frameSrc = $(this).data('src');
         $('#content').attr('src', frameSrc)
     });
+
+
+
+
+
   });
 </script>
 </body>
