--- a/View/permissions/roleList.html
+++ b/View/permissions/roleList.html
@@ -1,10 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="../../Static/js/layui/css/layui.css"  media="all">
 </head>
 <body>
 
+<div style="padding: 10px 0 0 10px;" class="layui-breadcrumb">
+    <a href="javascript:void(1);">权限管理</a>
+    <a href="javascript:void(1);"><cite>角色列表</cite></a>
+</div>
+
+<div style="padding: 10px 20px 20px 20px;">
+    <!--添加新角色信息表单-->
+    <form id="add-role" style="display: none;"  class="layui-form">
+        <div style="padding-top: 20px;">
+            <div class="layui-form-item">
+                <label class="layui-form-label">角色名称：</label>
+                <div class="layui-input-block" >
+                    <input type="text" style="width:200px; height:40px;" name="roleName" required  placeholder="请输入角色名称" lay-verify="required" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">角色说明：</label>
+                <div class="layui-input-block">
+                    <input type="text" style="width:200px; height:40px;" name="roleIntroduction" required  placeholder="请输入角色说明" lay-verify="required" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">权限Id：</label>
+                <div class="layui-input-block" style="width:200px; height:40px;">
+                    <input type="text" name="permissionId" required placeholder="请输入权限Id" lay-verify="required" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+        </div>
+    </form>
+
+    <button type="button" class="layui-btn addRole-btn">添加角色</button>
+
+    <table class="layui-hide" id="tableId" lay-filter="test2"></table>
+</div>
+<script src="../../Static/js/layui/layui.js" charset="utf-8"></script>
+
+<script>
+  layui.use(['table', 'form', 'element'], function() {
+
+    var table = layui.table;
+    var $ = layui.$;
+    var form = layui.form;
+    var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
+
+    //-------请求接口，加载权限列表
+    table.render({
+      elem: '#tableId'
+      , url: 'http://0.0.0.0:9501/role/index'
+      , parseData: function (res) {
+        return {
+          code: 0,
+          msg: res.msg,
+          count: res.result.count,
+          data: res.result.data
+        };
+      }
+      , cols: [[
+        {field: 'id', title: 'ID', align: 'center'}
+        , {field: 'role_name', title: '角色名称', align: 'center'}
+        , {field: 'role_introduction', title: '角色说明', align: 'center'}
+        , {field: 'create_staff', title: '创建人', align: 'center'}
+        , {field: 'update_staff', title: '更新人', align: 'center'}
+        , {field: 'create_time', title: '创建时间', width: 170, align: 'center'}
+        , {field: 'update_time', title: '更新时间', width: 170, align: 'center'}
+        , {field: 'permission_id', title: '权限Id', align: 'center'}
+      ]]
+      , page: true,
+    });
+
+
+    //-------'添加角色'按钮
+    $(function(){
+      $(".addRole-btn").click(function() {
+        layer.open({
+          title: '添加新角色信息',
+          type: 1,
+          content: $("#add-role"),    // 设置跳转的url，跳转到'添加新角色信息'的页面
+          area: ['380px', '450px'],
+          skin: 'layui-layer-molv',       // 墨绿色皮肤
+          anim: 0,  //效果
+          scrollbar: false,  //不允许出现滚动条
+          btn: ['确认', '取消'],
+          //'确定'按钮
+          yes: function (index, layero) {  //点击'确认'按钮
+            var formData = $("#add-role").serializeArray();  //获取表单参数
+            //console.log(formData)
+            var addData = {}; //定义json格式
+            formData.map(function (a) {  //表单参数转换为json格式
+              addData[a.name] = a.value;
+            });
+            // '添加员工'表单,自定义验证规则
+            if($.trim(addData.roleName)== ''){
+              layer.msg('角色名称不能为空', {icon: 0});
+            }else if($.trim(addData.roleIntroduction)==''){
+              layer.msg('角色说明不能为空', {icon: 0});
+            }else if($.trim(addData.permissionId)==''){
+              layer.msg('权限ID不能为空', {icon: 0});
+            }
+            $.ajax({
+              type: "POST",
+              url: "http://0.0.0.0:9501/role/insert",
+              data: {
+                role_name: addData.roleName,
+                role_introduction: addData.roleIntroduction,
+                permission_id: addData.permissionId
+              },
+              success: function (result) {  //添加成功
+                layer.closeAll();  //关闭窗口
+                layer.msg(result.msg, {icon: 1}, function () {});
+                $('#add-role')[0].reset();
+                table.reload('tableId'); //只重载数据
+              },
+              error: function (result) {  //失败
+                //console.log(result);
+                layer.msg(result.responseJSON.msg, {icon: 5});
+              },
+            });
+          },
+        });
+      })
+    } );
+
+  });
+</script>
 </body>
 </html>
