--- a/View/Main/home.html
+++ b/View/Main/home.html
@@ -68,7 +68,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:">系统设置</a>
+                    <a href="javascript:">服务管理</a>
                     <dl class="layui-nav-child">
                         <dd><a a class="menu-item"  data-src="/lifadian/View/systemSetting/addService.html" href="javascript:;">服务类型</a></dd>
                     </dl>
@@ -78,6 +78,13 @@
                     <dl class="layui-nav-child">
                         <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/memberStat.html" href="javascript:;">会员分析</a></dd>
                         <dd><a a class="menu-item"  data-src="/lifadian/View/dataStat/ordersStat.html" href="javascript:;">订单分析</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:">权限设置</a>
+                    <dl class="layui-nav-child">
+                        <dd><a a class="menu-item"  data-src="/lifadian/View/permissions/permissionsList.html" href="javascript:;">权限列表</a></dd>
+                        <dd><a a class="menu-item"  data-src="/lifadian/View/permissions/roleList.html" href="javascript:;">角色列表</a></dd>
                     </dl>
                 </li>
             </ul>
