--- a/View/permissions/permissionsList.html
+++ b/View/permissions/permissionsList.html
@@ -11,7 +11,7 @@
 
 <div style="padding: 10px 0 0 10px;" class="layui-breadcrumb">
     <a href="javascript:void(1);">权限管理</a>
-    <a href="javascript:void(1);"><cite>权限设置</cite></a>
+    <a href="javascript:void(1);"><cite>权限列表</cite></a>
 </div>
 
 <div style="padding: 10px 20px 20px 20px;">
