--- a/View/permissions/permissionsList.html
+++ b/View/permissions/permissionsList.html
@@ -40,17 +40,20 @@
         };
       }
       , cols: [[
-        {field: 'id', title: 'ID', align: 'center'}
+        {field: 'id', title: 'ID', align: 'left', templet:function (d) {
+          let result = d.id;
+          if (d.pid !== 0) {
+            result = '====='+result;
+          }
+            return result;
+        }}
         , {field: 'permission_name', title: '权限名称', align: 'center'}
         , {field: 'permission_url', title: '权限地址', align: 'center'}
-        , {field: 'pid', title: '上级权限', align: 'center'}
-        , {field: 'permission_introduction', title: '权限说明', align: 'center'}
         , {field: 'create_staff', title: '创建人', align: 'center'}
-        , {field: 'update_staff', title: '更新人', align: 'center'}
         , {field: 'create_time', title: '创建时间', width: 170, align: 'center'}
-        , {field: 'update_time', title: '更新时间', width: 170, align: 'center'}
       ]]
-      , page: true,
+      , page: false,
+      limit: 100000
     });
   });
 </script>
