--- a/View/admin/adminList.html
+++ b/View/admin/adminList.html
@@ -48,6 +48,15 @@
                     </select>
                 </div>
             </div>
+
+            <div class="layui-form-item">
+                <label class="layui-form-label" >角色：</label>
+                <div class="layui-input-block" style="width:200px; height:40px;">
+                    <select id="bd_employee_type" name='role' class="role" lay-verify="required">
+                    </select>
+                </div>
+            </div>
+
             <div class="layui-form-item">
                 <label class="layui-form-label">手机号：</label>
                 <div class="layui-input-block" style="width:200px; height:40px;">
@@ -96,6 +105,13 @@
                         <option value="0">理发师</option>
                         <option value="1">服务员</option>
                         <option value="2">洗头师</option>
+                    </select>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label" >角色：</label>
+                <div class="layui-input-block" style="width:200px; height:40px;">
+                    <select id="bd_employee_type" name='role' class="edit-role" lay-verify="required">
                     </select>
                 </div>
             </div>
@@ -156,6 +172,7 @@
         , {field: 'name', title: '姓名', align: 'center'}
         , {field: 'username', title: '用户名', align: 'center'}
         , {field: 'sex_txt', title: '性别', align: 'center'}
+        , {field: 'role', title: '角色', align: 'center'}
         , {field: 'employee_type_txt', title: '类型', align: 'center'}
         , {field: 'phone', title: '手机号', width: 120, align: 'center'}
         , {field: 'salary', title: '工资', align: 'center'}
@@ -172,7 +189,6 @@
     table.on('tool(test2)', function (obj) {  //注：tool是工具条事件名，test2 是 table 原始容器的属性 lay-filter="对应的值"
       //将PHP生成的json字符串赋值给js变量
       var data = obj.data;  //得到当前行数据
-      //console.log(obj);
       //点击'删除'按钮
       if (obj.event === 'del') {
         layer.confirm('是否删除本条员工信息？', function (index) {
@@ -211,6 +227,19 @@
         } else {
           $("#bd_employee_type ").val(2);
         }
+
+        let options='<option value="0">无</option>';
+        roles.map(item=>{
+          let checked = '';
+          if (Number(item.id) === Number(data.role_id)) {
+            checked = 'selected';
+          }
+          console.log(checked);
+          options += '<option '+checked+' value="'+item.id+'">'+item.role_name+'</option>'
+        });
+
+        $('.edit-role').html(options);
+
         form.render();  //更新全部，不然看不到效果
         //console.log(data);
         layer.open({
@@ -243,6 +272,7 @@
                 employee_type: addData.employee_type,
                 phone: addData.phone,
                 salary: addData.salary,
+                role_id: addData.role
               },
               success: function (result) {  //成功
                 layer.closeAll();  //关闭窗口
@@ -260,8 +290,29 @@
       }
     });
 
+    var roles;
+
+    function getRoles () {
+      $.ajax({
+        type: "POST",
+        url: "http://0.0.0.0:9501/role/get",
+        success: function (result) {  //删除会员成功
+          roles = result.result;
+            let options='<option value="0">无</option>';
+            result.result.map(item=>{
+              options += '<option value="'+item.id+'">'+item.role_name+'</option>'
+            });
+            $('.role').html(options);
+            form.render();
+        },
+        error: function (result) {
+        }
+      });
+    }
+
     //-------'添加员工'按钮
     $(function(){
+      getRoles();
       $(".addEmployee-btn").click(function() {
         layer.open({
           title: '添加新员工信息',
@@ -302,7 +353,8 @@
                 employee_type: addData.employee_type,
                 phone: addData.phone,
                 salary: addData.salary,
-                create_staff: addData.create_staff
+                create_staff: addData.create_staff,
+                role_id: addData.role
               },
               success: function (result) {  //添加成功
                 layer.closeAll();  //关闭窗口
@@ -311,7 +363,6 @@
                 table.reload('tableId'); //只重载数据
               },
               error: function (result) {  //失败
-                //console.log(result);
                 layer.msg(result.responseJSON.msg, {icon: 5});
               },
             });
